# PDFSmartTools

./: APK_SIZE_PROGUARD_GUIDE.md  App.tsx  PERFORMANCE_BASELINES.md  PLAY_STORE_LISTING.md  PRE_LAUNCH_TEST_MATRIX.md  PRODUCTION_READINESS_REPORT.md  PRODUCT_EXECUTION_PLAN.md  QA_STRESS_TEST_CHECKLIST.md  RELEASE_STRATEGY.md  TECHNICAL_ARCHITECTURE_AUDIT.md  TECHNICAL_DOCUMENTATION.md  app.json  babel.config.js  idea.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
QA_stress_tests/: README.md  compress_500_pages.sh  generate_test_pdfs.sh  merge_large.sh  rapid_operations.sh  run_all.sh
__tests__/services/: filePicker.test.ts  pdfPreflightService.test.ts  usageLimitService.test.ts
__tests__/utils/: progressUtils.test.ts  safeOperations.test.ts
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp
android/core-utils/: build.gradle.kts  consumer-rules.pro
android/pdf-convert/: build.gradle.kts  consumer-rules.pro
android/pdf-core/: build.gradle.kts  consumer-rules.pro
android/pdf-manipulate/: build.gradle.kts  consumer-rules.pro
android/pdf-sign/: build.gradle.kts  consumer-rules.pro
ios/: Podfile
ios/PDFSmartTools/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/PDFSmartTools.xcodeproj/: project.pbxproj
patches/: react-native-camera+4.2.1.patch
scripts/: generate-icons.js
store/: DEEP_LINKS_SETUP.md  PLAY_CONSOLE_CHECKLIST.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  assetlinks.json
(+420 files in other folders)
